# mlops_course

./: pyproject.toml
hw1/.ipynb_checkpoints/: duration-prediction-checkpoint.ipynb
hw2/: mlflow.db
hw2/.ipynb_checkpoints/: model-registry-checkpoint.ipynb
hw2/artifacts/4/11e549f8efa44bf29892ed346ffd3bbd/artifacts/model/: MLmodel
hw2/artifacts/4/142ab58f5284417f8c60b26cdbf02144/artifacts/model/: MLmodel
hw2/artifacts/4/753819f3b1f04948b69c9ce8b6c388d1/artifacts/model/: MLmodel
hw2/artifacts/4/a622f2e0eee644189a672fe3422e7cd7/artifacts/model/: MLmodel
hw2/artifacts/4/c4ad43cb2a944d4ca3d2759abd499742/artifacts/model/: MLmodel
hw2/homework/: hpo.py  register_model.py  train.py
hw2/mlruns/1/65dde2cfa6c749998c96b664da08b1da/artifacts/model/: MLmodel  conda.yaml
hw2/mlruns/1/d5a2d0b63cc94cc483018affe845dbce/artifacts/model/: MLmodel
hw3/: homework.py
hw3/artifacts/: model-2021-08-15.pkl
hw4/: Dockerfile  requirements.txt  starter.py
hw4/.ipynb_checkpoints/: starter-checkpoint.ipynb
