[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "Python 3 env."
authors = ["Ivan Mishalkin"]


[tool.poetry.dependencies]
python = "^3.8.0"
pandas = "^1.2.4"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"


[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"
