[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "Python 3 env."
authors = ["Ivan Mishalkin"]


[tool.poetry.dependencies]
python = "^3.8.0"
pandas = "^1.2.4"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"
mlflow = "^1.26.0"
xgboost = "^1.6.1"
hyperopt = "^0.2.7"
prefect = "2.0b5"


[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"
